--- a/src/index.css
+++ b/src/index.css
@@ -8,19 +8,17 @@
 }
 
 body {
-  background-color: #f4f8f9;
   font-size: 16px; 
 }
 
 .container {
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 1rem; /* Converted to rem */
+  max-width: 100vw;
+  height: 100vh;
+  padding: 1rem;
 }
 
 .users-table {
-  width: 100%;
-  border-collapse: collapse;
+  width: 100vw;
   margin-top: 2rem;
   border-radius: 10px !important; 
   border:1px solid #D3D3D3;
@@ -48,12 +46,12 @@ body {
 
 @media screen and (max-width: 600px) {
   .users-table {
-    font-size: 0.875rem; /* Converted to rem */
+    font-size: 0.875rem; 
   }
 
   .users-table th,
   .users-table td {
-    padding: 0.625rem; /* Converted to rem */
+    padding: 0.625rem; 
   }
 }
 
@@ -65,7 +63,7 @@ input{
   color: grey;
   font-size: 1rem; 
   border-radius: 0.3125rem; 
-  width: 60%;
+  width:60%;
   outline: none; 
 }
 
